force-app/main/default/objects/Social_Media_Post__c/Social_Media_Post__c.object-meta.xml
<CustomObject>
    <label>Social Media Post</label>
    <nameField>
        <displayFormat>SoMe-{0000}</displayFormat>
        <label>Social Ad Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>