force-app/main/default/objects/Social_Media_Post__c/fields/Post_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_ID__c</fullName>
    <externalId>true</externalId>
    <label>Post ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>