force-app/main/default/objects/Social_Media_Post__c/fields/Post_URL__c.field-meta.xml
<CustomField>
    <fullName>Post_URL__c</fullName>
    <formula>&quot;https://www.facebook.com/&quot;&amp;Social_Media_Profile_ID__c&amp;&quot;/posts/&quot;&amp;Post_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post URL</label>
    <type>Text</type>
</CustomField>