force-app/main/default/objects/Social_Media_Post__c/fields/Social_Media_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Profile_ID__c</fullName>
    <label>Social Media Profile ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>