force-app/main/default/objects/Social_Media_Post__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Social_Media_Profile_ID__c</columns>
    <columns>Post_ID__c</columns>
    <columns>Post_URL__c</columns>
    <columns>Market_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>